--- a/development.platform.yml
+++ b/development.platform.yml
@@ -1,14 +1,11 @@
-# development platform is just the base system
-# ready to develop. For security reasons, run this script in
-# a vm, or execute steps manually
 local:
- - bootstrap --no-monit --with-rbenv --verbose  --monit-password foo
+ - bootstrap --no-monit --with-rbenv --environment=development --verbose
 remote:
- - env set RAILS_ENV=development
-           PGDATABASE=atheneum
+ - env set PGDATABASE=atheneum
            POSTGRESQL_DB_USERNAME=mumuki
            POSTGRESQL_DB_PASSWORD=mumuki
            POSTGRESQL_DB_HOST=localhost
  - plugin install postgre --verbose
- - plugin install rabbit --rabbit_admin_password=admin --verbose
+ - plugin install rabbit --rabbit-admin-password=admin --verbose
  - plugin install mongo --verbose
+ 
