--- a/development.platform.yml
+++ b/development.platform.yml
@@ -1,11 +1,11 @@
 local:
- - bootstrap --no-monit --with-rbenv --env=development --verbose
+ - bootstrap --no-monit --with-rbenv --env development --verbose
 remote:
  - env set PGDATABASE=atheneum
            POSTGRESQL_DB_USERNAME=mumuki
            POSTGRESQL_DB_PASSWORD=mumuki
            POSTGRESQL_DB_HOST=localhost
  - plugin install postgre --verbose
- - plugin install rabbit --rabbit-admin-password=admin --verbose
+ - plugin install rabbit --rabbit-admin-password admin --verbose
  - plugin install mongo --verbose
  
